--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,13 @@
 *.classpath
 *.project
 .settings/
+CREDITS-fml.txt
+LICENSE-fml.txt
+MinecraftForge-Credits.txt
+MinecraftForge-License.txt
 build/
+eclipse/
+forge-1.6.4-9.11.1.964-changelog.txt
 .gradle/
 output/
 .cache
@@ -13,4 +19,13 @@ output/
 *.iws
 *.idea/
 logs/
+html/downloads/
+downloads/
 *.xml
+VoltzEngine.txt
+APP-AuthTest/
+CompiledWith.txt
+banned-ips.json
+banned-players.json
+ops.json
+whitelist.json
